--- a/src/app/demographics/demographics.component.html
+++ b/src/app/demographics/demographics.component.html
@@ -1,4 +1,4 @@
-<table width="100%" cellpadding="10" cellspacing="1" border="1">
+<table cellpadding="10" cellspacing="1" border="1">
   <thead>
     <tr>
       <th>SUB_REGION</th>
